Improve Ticketry desktop application workflows
